--- a/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/.eslintrc
+++ b/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/.eslintrc
@@ -23,5 +23,10 @@
     "node": true,
     "browser": true
   },
-  "extends": "eslint:recommended"
+  "extends": "eslint:recommended",
+  "parser": "babel-eslint",
+  "ecmaFeatures": {
+    "jsx": true,
+    "modules": true}
+    
 }
