--- a/.github/workflows/unit-tests-workflow.yml
+++ b/.github/workflows/unit-tests-workflow.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           node-version: 14
       - name: Run unit tests
-        run: cd ${{github.workspace}} && npm install && npx jest
-         cd ${{github.workspace}} && npm install && npx jest
-         cd ${{github.workspace}} && npm install && npx jest
+        run: cd ${{github.workspace}}/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a && npm install && npx jest
+         cd ${{github.workspace}}/js-game-keep-white-space-b5d8b7d35857d4df4a3d85a9fa65aa4217e11757 && npm install && npx jest
+         cd ${{github.workspace}}/js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e && npm install && npx jest
