--- a/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/package.json
+++ b/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/package.json
@@ -31,6 +31,7 @@
     "browserify": "^11.0.1",
     "eslint": "^1.3.0",
     "glslmin": "0.0.0",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "jest": "^29.6.4",
     "live-server": "^0.8.1",
     "uglify-js": "^2.4.24",
