--- a/js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e/package.json
+++ b/js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e/package.json
@@ -35,5 +35,10 @@
     "rollup": "2.56.3",
     "through2": "4.0.2",
     "vite": "2.5.6"
+  },
+  "dependencies": {
+    "doc": "0.0.3",
+    "liveserver": "0.1.20",
+    "yarn": "1.22.19"
   }
 }
