docker compose with all 3 games and mysql db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,12 @@ services:
     cap_add:
       - SYS_NICE
     restart: always
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      - MYSQL_DATABASE=quotes
-      - MYSQL_ROOT_PASSWORD=mauFJcuf5dhRMQrjj
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - '3306:3306'
     volumes:
@@ -24,8 +27,8 @@ services:
   behindasteroids:
     build: ./behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a
     ports:
-      - '4243:3000'
-  js13K:
+      - '4243:8080'
+  js13k:
     build: ./js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e
     ports:
       - '4244:3000'
