--- a/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/Dockerfile
+++ b/behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM node:18-alpine
 WORKDIR /app
-COPY ["package.json", "package-lock.json*", "./"]
-RUN npm install --production
+COPY ["package.json", "package-lock.json*", "behind-asteroids.zip", "./"]
+RUN npm install
 COPY . .
-RUN npm run start
-EXPOSE 5000:3000
+RUN npm install serve --global
+CMD ["serve"]
