--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,10 @@ services:
     restart: always
     ports:
       - 8080:8080
-  # api:
-  #   build: ./api
-  #   ports:
-  #     - '3000:3000'
+  api:
+    build: ./api
+    ports:
+      - '3000:3000'
   keepwhitespaces:
     build: ./js-game-keep-white-space-b5d8b7d35857d4df4a3d85a9fa65aa4217e11757
     ports:
