--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,15 +28,19 @@ services:
   keepwhitespaces:
     build: ./js-game-keep-white-space-b5d8b7d35857d4df4a3d85a9fa65aa4217e11757
     ports:
-      - '4242:3000'
+      - '4243:3000'
   behindasteroids:
     build: ./behind-asteroids-3ce49e995ffd50ff506ec010dd71257f0040f91a
     ports:
-      - '4243:3000'
+      - '4242:3000'
   js13k:
     build: ./js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e
     ports:
       - '4244:3000'
+  front:
+    build: ./front
+    ports:
+      - '8000:3000'
 volumes:
   db:
     driver: local
