--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -6,8 +6,6 @@ COPY ["package.json", "package-lock.json*", "./"]
 
 RUN npm install
 
-RUN npm install nodemon -g
-
 COPY . .
 
-CMD ["nodemon", "server.js"]
+CMD ["npm", "start"]
