--- a/.github/workflows/unit-tests-workflow.yml
+++ b/.github/workflows/unit-tests-workflow.yml
@@ -18,4 +18,9 @@ jobs:
       - name: Install dependencies & run tests & run linter for js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e
         working-directory: ./js13k-2021-fd4b9e6e1954b8850125c0a7a0219db0607bf37e
         run: npm install && npx jest && npx eslint ./src
-        
+      - name: Test build of docker compose
+        working-directory: ./
+        run: docker-compose up
+      - name: Generate documentation with jsdoc
+        working-directory: ./api
+        run: npm install jsdoc -g && jsdoc ./
